# interconnect-alpha

./: AGENTS.md  PRODUCT_BRIEF.md  README.md  STATUS.md  pyproject.toml  requirements.txt  streamlit_app.py
.github/workflows/: ci.yml
data/: calibration_metrics.json  capacity_fan_chart_2027_2030.parquet  pjm_queue_cohort_2018_2023.parquet  pjm_rpm_history.parquet  scenarios.yaml  survival_distributions.parquet
decisions/: DEC-ITA-001-survival-estimator.md  DEC-ITA-002-scenario-set.md
docs/: first-pr.md  system-map.md
interconnect_alpha/: __init__.py  cli.py  model.py  scoring.py  show.py  validation.py
reports/: 2026-08-pjm-survival.jsonl  2026-08-pjm-survival.md
scripts/: build_artifacts.py  traceability.py  voice_lint.py
specs/0001-foundation/: acceptance.md  design.md  requirements.md  tasks.md
specs/0002-design/: acceptance.md  design.md  requirements.md  tasks.md
specs/0002-design-ledger/: ledger.md
tests/: test_validate.py
