[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "interconnect-alpha"
version = "0.1.0"
description = "PJM queue-survival and capacity-curve report module."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
  "pandas>=2.2",
  "pyarrow>=15",
  "PyYAML>=6.0",
]

[project.scripts]
ita = "interconnect_alpha.cli:main"

[dependency-groups]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
]

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["interconnect_alpha"]

